--- a/01-boolean-algebra/01-boolean-algebra.lyx
+++ b/01-boolean-algebra/01-boolean-algebra.lyx
@@ -1360,7 +1360,7 @@ tautologia
 
 \begin_layout Standard
 \align center
-\begin_inset Formula $bc$
+\begin_inset Formula $b+c$
 \end_inset
 
 
@@ -1714,7 +1714,7 @@ H & = & \overline{b}+\overline{a}
 \begin_inset Text
 
 \begin_layout Plain Layout
-1
+0
 \end_layout
 
 \end_inset
