--- a/02-binary/02-binary.lyx
+++ b/02-binary/02-binary.lyx
@@ -1849,6 +1849,30 @@ overflow
 Sono bit indipendenti ma entrambi sintomo di risultato inesatto.
 \end_layout
 
+\begin_layout Standard
+Approfondimento consigliato
+\begin_inset Foot
+status open
+
+\begin_layout Plain Layout
+\begin_inset Flex URL
+status open
+
+\begin_layout Plain Layout
+
+http://teaching.idallen.com/dat2343/10f/notes/040_overflow.txt
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
 \end_deeper
 \begin_layout Separator
 
